<resources>
    <string name="app_name">City Guide</string>
    <string name="slogan_name">We will help you to find your way!</string>

    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="movie_halls">Theaters</string>

    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in city!</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search..</string>
    <string name="home">HOME</string>
    <string name="missing_place">ADD MISSING PLACE</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>

    <!--Owner page strings -->

    <string name="sign_up">Sign UP</string>
    <string name="owner_startup_heading">Grow\nYour Business</string>
    <string name="owner_startup_page_tagline">We will help you to grow your business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How We Work?</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="have_an_account">Have An Account ?</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="button">Button</string>
    <string name="or">Or</string>
    <string name="new_user_sign_up">New User ? Sign Up</string>
</resources>